# mcp

./: Cargo.toml  README.md
crates/rustuse-mcp-core/: Cargo.toml
crates/rustuse-mcp-core/src/: adoption.rs  catalog.rs  error.rs  lib.rs  overlap.rs  prompts.rs  rules.rs  validation.rs
crates/rustuse-mcp-server/: Cargo.toml
crates/rustuse-mcp-server/src/: config.rs  main.rs  prompts.rs  resources.rs  server.rs  tools.rs
data/: rustuse-adoption-paths.json  rustuse-catalog.json  rustuse-rules.json
docs/: local-setup.md  overview.md  prompts.md  resources.md  security.md  tools.md
examples/: cursor.json  vscode.json
prompts/: audit-overlap.md  brainstorm-set.md  create-child-crate.md  create-set-v0.1.md  generate-copilot-plan.md  generate-docs-page.md  validate-set-plan.md
