[workspace]
members = ["crates/rustuse-mcp-core", "crates/rustuse-mcp-server"]
resolver = "3"

[workspace.package]
authors = ["RustUse Contributors"]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustUse/mcp"
homepage = "https://rustuse.org"
documentation = "https://rustuse.org"
publish = false

[workspace.dependencies]
anyhow = "1.0.100"
rmcp = { version = "1.7.0", default-features = false, features = [
    "schemars",
    "server",
    "transport-io",
] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "signal",
] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
