[package]
name = "rustuse-mcp-server"
description = "Read-only stdio MCP server for RustUse catalog, rules, prompts, and planning tools"
publish.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow.workspace = true
rmcp.workspace = true
rustuse-mcp-core = { path = "../rustuse-mcp-core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
